--- a/index.html
+++ b/index.html
@@ -10,13 +10,97 @@
 </head>
 <body>
   <div class="container">
-    <h1>Hello World</h1>
-    <a href="" class="btn btn-primary">Click Me</a>
+    <div class="weather-app">
+      <form class="search-form" id="search-form">
+        <div class="row">
+          <div class="col-9">
+            <input
+              type="search"
+              placeholder="Search City"
+              class="form-control"
+              autofocus="on"
+              id="city-input"
+              class="form-control shadow-sm"
+            />
+          </div>
+          <div class="col-3">
+            <input
+              type="submit"
+              value="Search"
+              class="form-control btn btn-primary shadow-sm"
+            />
 
+            <div>
+              <button
+                class="btn btn-success w-100"
+                id="current-location-button"
+              >
+                Current
+              </button>
+            </div>
+          </div>
+        </div>
+      </form>
 
+      <h1 id="city"></h1>
+      <h6 id="date"><br />Cloudy</h6>
+      <h6 id="description"><br /></h6>
+      <br />
+      <br />
 
+      <div class="row attributes">
+        <div class="col-sm">
+          <img
+            src="https://ssl.gstatic.com/onebox/weather/64/sunny_s_cloudy.png"
+            alt="Partly Cloudy icon"
+            width="75"
+            class="weather-icon"
+          />
+        </div>
+        <div
+          class="col-sm"
+          class="float-left"
+          class="temperature"
+          id="temperature"
+        ></div>
+        <span class="units">
+          <a href="#" id="celsius-link">°C</a> |
+          <a href="#" id="fahrenheit-link">°F</a>
+        </span>
+      </div>
+      <br />
+      <br />
+      <br />
+
+      <div class="row attributes">
+        
+        <div class="col-sm"><span id="humidity"></span><br />Humidity</div>
+        <div class="col-sm"><span id="wind"></span>% <br />Wind</div>
+      </div>
+      <br />
+      <br />
+      <hr />
+      <div class="container">
+        <div class="row weekday-weather">
+          <div class="col monday-weather">
+            <span>Saturday⛅</span> <br />14°C<br />
+          </div>
+          <div class="col tuesday-weather">
+            <span>Sunday ⛅</span> <br />15°C<br />
+          </div>
+          <div class="col wednesday-weather">
+            <span>Monday⛅</span> <br />13°C<br />
+          </div>
+          <div class="col thursday-weather">
+            <span>Thrusday⛅</span> <br />14°C<br />
+          </div>
+          <div class="col friday-weather">
+            <span>Wednesday⛅</span> <br />12°C<br />
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-  <script src="src/app.js"></script>
-
+  <script src="src/index.js"></script>
 </body>
 </html>
