--- a/index.html
+++ b/index.html
@@ -51,12 +51,13 @@
 
       <div class="row attributes">
         <div class="col-sm">
-          <img
-            src="https://ssl.gstatic.com/onebox/weather/64/sunny_s_cloudy.png"
-            alt="Partly Cloudy icon"
-            width="75"
-            class="weather-icon"
-          />
+          <div class="clearfix weather-temperature">
+            <img src="" alt="Clear" id="icon" class="float-left" />
+            <div class="float-left">
+              <strong id="temperature"></strong>
+              <span class="units">
+                <a href="#" id="celsius-link">°C</a> |
+                <a href="#" id="fahrenheit-link">°F</a>
         </div>
         <div
           class="col-sm"
@@ -64,10 +65,6 @@
           class="temperature"
           id="temperature"
         ></div>
-        <span class="units">
-          <a href="#" id="celsius-link">°C</a> |
-          <a href="#" id="fahrenheit-link">°F</a>
-        </span>
       </div>
       <br />
       <br />
@@ -90,10 +87,10 @@
             <span>Sunday ⛅</span> <br />15°C<br />
           </div>
           <div class="col wednesday-weather">
-            <span>Monday⛅</span> <br />13°C<br />
+            <span>Monday ⛅</span> <br />13°C<br />
           </div>
           <div class="col thursday-weather">
-            <span>Thrusday⛅</span> <br />14°C<br />
+            <span>Thursday⛅</span> <br />14°C<br />
           </div>
           <div class="col friday-weather">
             <span>Wednesday⛅</span> <br />12°C<br />
