--- a/index.html
+++ b/index.html
@@ -78,27 +78,11 @@
       <br />
       <br />
       <hr />
-      <div class="container">
-        <div class="row weekday-weather">
-          <div class="col monday-weather">
-            <span>Saturday⛅</span> <br />14°C<br />
-          </div>
-          <div class="col tuesday-weather">
-            <span>Sunday ⛅</span> <br />15°C<br />
-          </div>
-          <div class="col wednesday-weather">
-            <span>Monday ⛅</span> <br />13°C<br />
-          </div>
-          <div class="col thursday-weather">
-            <span>Thursday⛅</span> <br />14°C<br />
-          </div>
-          <div class="col friday-weather">
-            <span>Wednesday⛅</span> <br />12°C<br />
-          </div>
-        </div>
-      </div>
     </div>
   </div>
+  <footer>
+    <a href="https://github.com/DeboraCesar/vanilla-weather-app" target="_blank">Open-source code</a> Debora Cesar
+  </footer>
   <script src="src/index.js"></script>
 </body>
 </html>
