--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="src/style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
+    <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+    crossorigin="anonymous"
+  />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
 </head>
@@ -44,7 +49,7 @@
       </form>
 
       <h1 id="city"></h1>
-      <h6 id="date"><br />Cloudy</h6>
+      <h6 id="date"><br /></h6>
       <h6 id="description"><br /></h6>
       <br />
       <br />
@@ -72,14 +77,15 @@
 
       <div class="row attributes">
         
-        <div class="col-sm"><span id="humidity"></span><br />Humidity</div>
-        <div class="col-sm"><span id="wind"></span>% <br />Wind</div>
+        <div class="col-sm"><span id="humidity"></span>% <br />Humidity</div>
+        <div class="col-sm"><span id="wind"></span>km/h <br />Wind</div>
+        <br />
+        <br />
+          <div class="weather-forecast" id="forecast">
+        </div>
       </div>
-      <br />
-      <br />
-      <hr />
     </div>
-  </div>
+    <hr />
   <footer>
     <a href="https://github.com/DeboraCesar/vanilla-weather-app" target="_blank">Open-source code</a> Debora Cesar
   </footer>
